@@ -8,6 +8,7 @@
 - bugfix: correctly fail when array ends without closing at EOF
 - bugfix: correctly fail when inline table is missing separators or has
   trailing separator
+- bugfix: disallow non-permitted control characters in strings and comments
 
 0.13 2021-07-26
 -Fix a spurious warning being raised on trailing spaces in hexadecimal numbers (thanks jjatria)
